fix some bugs in case1.html

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 			<nav class="site-nav">
 				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li><a href="#work">Work</a></li>
+					<li><a href="#selected-work">Work</a></li>
 					<li><a href="about.html" class="active">About</a></li>
 					<li>
 						<a href="https://docs.google.com/document/d/.../view" target="_blank" rel="noopener noreferrer">
@@ -37,6 +37,7 @@
 			
 			<div class="about-hero__image-block">
 				<img 
+					id="portrait"
 					src="./assets/images/portrait.jpg" 
 					alt="Portrait of Michelle Parker" 
 					class="about-hero__image"
@@ -81,15 +82,39 @@
 					<div class="about-hero__item">
 						<div class="about-hero__icon">🐈</div>
 						<p class="about-hero__text">
-							<strong>When I’m not designing</strong>, I’m usually out walking with a matcha (or hojicha, or chai…). I also love thrifting, a plot-driven videogame, and hanging out with my very round British Shorthair.
+							<strong>When I’m not designing</strong>, I’m usually 
+							<span class="hover-preview">
+								<span class="hover-preview__text">out walking</span>
+								<img src="./assets/images/about_walking.png" alt="Me, on a walk" class="hover-preview__img">
+							</span> 
+							with a 
+							<span class="hover-preview">
+								<span class="hover-preview__text">matcha</span>
+								<img src="./assets/images/about_matcha.png" alt="Cup of matcha" class="hover-preview__img">
+							</span> 
+							(or hojicha, or chai…). I also love 
+							<span class="hover-preview">
+								<span class="hover-preview__text">thrifting</span>
+								<img src="./assets/images/about_thrifthing.png" alt="A thrift find" class="hover-preview__img">
+							</span>, 
+							<span class="hover-preview">
+								<span class="hover-preview__text">a plot-driven videogame</span>
+								<img src="./assets/images/about_videoGames.png" alt="A picture of Elly from The Last of Us" class="hover-preview__img">
+							</span>, 
+							and hanging out with my 
+							<span class="hover-preview">
+								<span class="hover-preview__text">very round British Shorthair</span>
+								<img src="./assets/images/about_cat.png" alt="A picture of my cat" class="hover-preview__img">
+							</span>.
 						</p>
+
 					</div>
 
 					<div class="about-hero__item">
 						<div class="about-hero__icon">📨</div>
 						<p class="about-hero__text">
 							<strong>Feel free to reach out</strong> at 
-							<a href="mailto:hi@michelledesign.ca">hi@michelledesign.ca</a> 
+							<a href="mailto:hi@michelledesign.ca" class="about-email">hi@michelledesign.ca</a> 
 							to talk about all things design or collaborate on a cool project together!
 						</p>
 					</div>
@@ -128,13 +153,13 @@
           <li>
 						<a href="https://linkedin.com/..." target="_blank" rel="noopener">
 							LinkedIn
-							<img src="./assets/icons/external-link.svg" alt="" class="external-ic    aria-hidden="true" />
+							<img src="./assets/icons/external-link.svg" alt="" class="external-icon" aria-hidden="true" />
 						</a>
 					</li>
         	<li>
 						<a href="https://linkedin.com/..." target="_blank" rel="noopener">
 							Resume
-							<img src="./assets/icons/external-link.svg" alt="" class="external-icoaria-hidden="true" />
+							<img src="./assets/icons/external-link.svg" alt="" class="external-icon" aria-hidden="true" />
 						</a>
 					</li>
         </ul>
@@ -143,5 +168,7 @@
 
   </div>
 </footer>
+<script src="./scripts/main.js" defer></script>
+
   </body>
 </html>
