--- a/case1.html
+++ b/case1.html
@@ -16,7 +16,7 @@
       <nav class="site-nav">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="#work">Work</a></li>
+          <li><a href="#selected-work">Work</a></li>
           <li><a href="about.html">About</a></li>
           <li>
             <a href="https://docs.google.com/document/d/.../view" target="_blank" rel="noopener noreferrer">
@@ -164,7 +164,7 @@
             </h3>
             <div class="twocol__main">
               <div class="twocol__textblock">
-                <p class="add-small-margin-bottom">
+                <p >
                   This project was handed off to me from a fellow designer who worked on its earliest phase. I deepened the research she started by reviewing:
                 </p>
                 <ul>
@@ -178,9 +178,15 @@
               </div>
               <div class="icon-card">
                 <div class="icon-card__header">
-                  <img src="./assets/icons/circle-question-mark.svg" alt="" aria-hidden="true" class="icon-box__icon"/>
+                  <span class="icon-box icon-box-green">
+                    <img src="./assets/icons/accessibility.svg" alt="" class="icon-box__icon" aria-hidden="true">
+                  </span>
+                  <!-- <span class="icon-box">
+                    <img src="./assets/icons/circle-question-mark.svg" alt="" class="icon-box__icon">
+                  </span> -->
                   <h4 class="icon-card__title">Key questions</h4>
                 </div>
+
                 <ul class="icon-card__list">
                   <li>What makes <strong>existing digital triage solutions effective</strong> (or not)?</li>
                   <li>How can we <strong>reduce confusion and friction</strong> for users who are in <strong>pain or stressed out</strong>?</li>
@@ -200,44 +206,44 @@
             </h3>
             <div class="twocol__main">
               <ul class="goals-list">
-                <li class="goals-list__item">
-                  <span class="icon-box">
+                <li class=" goals-list__item goals-list__item-no-right-padding">
+                  <span class="icon-box icon-box-margin-left">
                     <img src="./assets/icons/accessibility.svg" alt="" class="icon-box__icon" aria-hidden="true" />
                   </span>
                   <span class="goals-list__text"><strong>Accessible</strong> for users with disabilities</span>
                 </li>
-                <li class="goals-list__item">
-                  <span class="icon-box">
+                <li class="goals-list__item goals-list__item-no-right-padding">
+                  <span class="icon-box icon-box-margin-left">
                     <img src="./assets/icons/languages.svg" alt="" class="icon-box__icon" aria-hidden="true" />
                   </span>
                   <span class="goals-list__text"><strong>Bilingual (English/French)</strong> to support Canadian French-speaking population</span>
                 </li>
-                <li class="goals-list__item">
-                  <span class="icon-box">
+                <li class="goals-list__item goals-list__item-no-right-padding">
+                  <span class="icon-box icon-box-margin-left">
                     <img src="./assets/icons/smile.svg" alt="" class="icon-box__icon" aria-hidden="true" />
                   </span>
                   <span class="goals-list__text"><strong>Friendly and reassuring</strong> but not childish or immature</span>
                 </li>
-                <li class="goals-list__item">
-                  <span class="icon-box">
+                <li class="goals-list__item goals-list__item-no-right-padding">
+                  <span class="icon-box icon-box-margin-left">
                     <img src="./assets/icons/milestone.svg" alt="" class="icon-box__icon" aria-hidden="true" />
                   </span>
                   <span class="goals-list__text"><strong>Simple and intuitive</strong> to provide straightforward guidance for users who may be stressed out or in pain</span>
                 </li>
-                <li class="goals-list__item">
-                  <span class="icon-box">
+                <li class="goals-list__item goals-list__item-no-right-padding">
+                  <span class="icon-box icon-box-margin-left">
                     <img src="./assets/icons/log-in.svg" alt="" class="icon-box__icon" aria-hidden="true" />
                   </span>
                   <span class="goals-list__text">Designed for use <strong>without login or account creation</strong></span>
                 </li>
-                <li class="goals-list__item">
-                  <span class="icon-box">
+                <li class="goals-list__item goals-list__item-no-right-padding">
+                  <span class="icon-box icon-box-margin-left">
                     <img src="./assets/icons/file-edit.svg" alt="" class="icon-box__icon" aria-hidden="true" />
                   </span>
                   <span class="goals-list__text">Must allow users to <strong>revise previous answers easily</strong> (in case of mistakes or if the patient’s symptoms change)</span>
                 </li>
-                <li class="goals-list__item">
-                  <span class="icon-box">
+                <li class="goals-list__item goals-list__item-no-right-padding no-margin-bottom">
+                  <span class="icon-box icon-box-margin-left">
                     <img src="./assets/icons/tablet-smartphone.svg" alt="" class="icon-box__icon" aria-hidden="true" />
                   </span>
                   <span class="goals-list__text"><strong>Mobile-first:</strong> due to the hospital setting, users were most likely to access the tool via a phone or a tablet</span>
@@ -262,7 +268,7 @@
         </section>
 
         <!-- Две колонки: User flows & mapping -->
-        <section class="case-howmightwe__block" aria-labelledby="case-howmightwe-5-title">
+        <section class="case-howmightwe__block case-howmightwe__block-margin-bottom-less" aria-labelledby="case-howmightwe-5-title">
           <div class="twocol twocol--wide">
             <h3 id="case-howmightwe-5-title" class="twocol__heading">
               User flows &amp; feature<br>mapping
@@ -271,7 +277,7 @@
               <p>
                 Working with the PM and referencing clinician-created triage logic, I mapped user flows, information architecture, and feature mapping.
               </p>
-              <p class="add-small-margin-bottom">
+              <p>
                 Based on this exercise, we have scoped the MVP features down to:
               </p>
               <ul>
@@ -321,9 +327,9 @@
               </p>
 
               <!-- Findings from children -->
-              <div class="insight-card">
+              <div class="insight-card add-small-margin-top">
                 <div class="insight-card__header">
-                  <div class="icon-box">
+                  <div class="icon-box icon-box-green">
                     <img
                       src="./assets/icons/child.svg"
                       alt=""
@@ -344,7 +350,7 @@
               <!-- Findings from parents -->
               <div class="insight-card">
                 <div class="insight-card__header">
-                  <div class="icon-box">
+                  <div class="icon-box icon-box-green">
                     <img
                       src="./assets/icons/user.svg"
                       alt=""
@@ -610,7 +616,7 @@
           <h4 class="site-footer__heading">Navigation</h4>
           <ul class="site-footer__list">
             <li><a href="index.html">Home</a></li>
-            <li><a href="#work">Work</a></li>
+            <li><a href="#selected-work" class="active">Work</a></li>
             <li><a href="about.html">About</a></li>
           </ul>
         </div>
@@ -634,6 +640,6 @@
       </div>
     </div>
   </footer>
-  <script src="./scripts/main.js"></script>
+  <script src="./scripts/main.js" defer></script>
 </body>
 </html>
