--- a/case1_backup.html
+++ b/case1_backup.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="https://use.typekit.net/qgp2tae.css" />
   <link rel="stylesheet" href="./styles/reset.css" />
   <link rel="stylesheet" href="./styles/style.css" />
+  <script src="./scripts/main.js" defer></script>
+
 </head>
 
 <body>
