--- a/case2.html
+++ b/case2.html
@@ -16,7 +16,7 @@
       <nav class="site-nav">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="#work">Work</a></li>
+          <li><a href="#selected-work" class="active">Work</a></li>
           <li><a href="about.html">About</a></li>
           <li>
             <a href="https://docs.google.com/document/d/.../view" target="_blank" rel="noopener noreferrer">
@@ -311,7 +311,9 @@
               </p>
               <div class="icon-card">
                 <div class="icon-card__header">
-                  <img src="./assets/icons/research.svg" alt="" class="icon-box__icon" />
+                  <div class="icon-box icon-box-green">
+                    <img src="./assets/icons/pencil-line.svg" alt="" class="icon-box__icon" width="24" height="24">
+                  </div>
                   <h4 class="icon-card__title">Research approach</h4>
                 </div>
                 <ul class="icon-card__list">
@@ -325,7 +327,9 @@
               <p class="add-small-margin-top">We also held collaborative brainstorming sessions, where each designer brought ideas and references for UI improvement. We referenced our research for reminders about practical UX patterns and emotional engagement strategies tailored to older adults.</p>
               <div class="icon-card">
                 <div class="icon-card__header">
-                  <img src="./assets/icons/sparkles.svg" alt="" class="icon-box__icon" />
+                  <div class="icon-box icon-box-green">
+                    <img src="./assets/icons/sparkles.svg" alt="" class="icon-box__icon" width="24" height="24">
+                  </div>
                   <h4 class="icon-card__title">AI in our workflow</h4>
                 </div>
                 <ul class="icon-card__list">
@@ -594,7 +598,7 @@
               <ul class="case-context__list">
                 
                 <li>In-app onboarding walkthroughs for new users</li>
-                <li>More refined personalization based on user activity, including a ap</li>
+                <li>More refined personalization based on user activity, including a personalized activity plan and goal-setting</li>
                 <li>Enhanced voice interaction features for accessibility for users who may struggle to type</li>
               </ul>
             </dd>
@@ -651,6 +655,6 @@
       </div>
     </div>
   </footer>
-  <script src="./scripts/main.js"></script>
+  <script src="./scripts/main.js" defer></script>
 </body>
 </html>
