Finish the fixing of the cases

--- a/case1.html
+++ b/case1.html
@@ -322,12 +322,12 @@
               <p>
                 An external partner from the hospital team also ran a focus group with some patients from the hospital and shared their learnings with us.
               </p>
-              <p class="add-small-margin-bottom">
+              <p>
                 Overall, the tool was deemed useful and easy to use. However, there was some room for improvement as well...
               </p>
 
               <!-- Findings from children -->
-              <div class="insight-card add-small-margin-top">
+              <div class="insight-card">
                 <div class="insight-card__header">
                   <div class="icon-box icon-box-green">
                     <img
