Add small changes

--- a/case1.html
+++ b/case1.html
@@ -83,7 +83,7 @@
           </div>
           <div class="case-overview__meta-item">
             <dt>Team</dt>
-            <dd>Product Manager & Software engineers</dd>
+            <dd>Product Manager & Developer team</dd>
           </div>
           <div class="case-overview__meta-item">
             <dt>Timeframe</dt>
@@ -179,7 +179,7 @@
               <div class="icon-card">
                 <div class="icon-card__header">
                   <span class="icon-box icon-box-green">
-                    <img src="./assets/icons/accessibility.svg" alt="" class="icon-box__icon" aria-hidden="true">
+                    <img src="./assets/icons/circle-question-mark.svg" alt="" class="icon-box__icon" aria-hidden="true">
                   </span>
                   <!-- <span class="icon-box">
                     <img src="./assets/icons/circle-question-mark.svg" alt="" class="icon-box__icon">
