fix small details

--- a/case2.html
+++ b/case2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Case Study – [Project Name]</title>
+  <title>Case Study - Senior's App</title>
   <link rel="stylesheet" href="https://use.typekit.net/qgp2tae.css" />
   <link rel="stylesheet" href="./styles/reset.css" />
   <link rel="stylesheet" href="./styles/style.css" />
@@ -222,19 +222,19 @@
                   <span class="feedback-quote__icon-bg">
                     <img src="./assets/icons/quote.svg" alt="" class="feedback-quote__icon" width="24" height="24" />
                   </span>
-                  <span>“The homepage feels <em>blah</em> and not fun. Can we take it up a notch?”</span>
+                  <span class="feedback-quote__text">“The homepage feels <em>blah</em> and not fun. Can we take it up a notch?”</span>
                 </div>
                 <div class="feedback-quote">
                   <span class="feedback-quote__icon-bg">
                     <img src="./assets/icons/quote.svg" alt="" class="feedback-quote__icon" width="24" height="24" />
                   </span>
-                  <span>“I wish I could go back to that one video, but I forgot what it was and there are so many folders here!”</span>
+                  <span class="feedback-quote__text">“I wish I could go back to that one video, but I forgot what it was and there are so many folders here!”</span>
                 </div>
                 <div class="feedback-quote">
                   <span class="feedback-quote__icon-bg">
                     <img src="./assets/icons/quote.svg" alt="" class="feedback-quote__icon" width="24" height="24" />
                   </span>
-                  <span>“It’s hard to find any reports once I’ve completed my questionnaire.”</span>
+                  <span class="feedback-quote__text">“It’s hard to find any reports once I’ve completed my questionnaire.”</span>
                 </div>
               </div>
         
@@ -360,9 +360,9 @@
             <div class="case-highlights__visual">
               <div class="case-highlights__visual-col case-highlights__visual-col--left">
                 <img
-                  src="./assets/images/homepagescroll 2.png"
+                  src="./assets/images/hello_Jenny.gif"
                   alt="GIF of redesigned homepage widget layout"
-                  class="case-highlights__visual-image case-highlights__visual-image--wide" />
+                  class="case-highlights__visual-image case-highlights__visual-image--wide corners-rounded" />
               </div>
               <div class="case-highlights__visual-col case-highlights__visual-col--right">
                 <!-- Тут карточки -->
