--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             </p>
           </div>
           <div class="work-card__icon-wrapper" aria-hidden="true">
-            <img src="./assets/icons/ext_link2.svg" alt="" class="work-card__icon" />
+            <img src="./assets/icons/_button-icon.svg" alt="" class="work-card__icon" />
           </div>
         </div>
 
