--- a/case1.html
+++ b/case1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Case Study – Thrive Health</title>
+  <title>Case Study - ER Triage</title>
   <link rel="stylesheet" href="https://use.typekit.net/qgp2tae.css" />
   <link rel="stylesheet" href="./styles/reset.css" />
   <link rel="stylesheet" href="./styles/style.css" />
