Fixed the adaptive for home page

--- a/index.html
+++ b/index.html
@@ -103,18 +103,22 @@
       <article class="work-card " aria-labelledby="work1-title" role="article">
         <a href="case1.html" class="work-card__link" aria-label="Read more about Thrive Health case study"></a>
 
-        <div class="work-card-upper">
-          <div class="work-card__general-info">
-            <h3 id="work1-title" class="work-card__title">Thrive Health</h3>
-            <p class="work-card__subtitle">Streamlining pediatric ER triage with 92% accuracy</p>
-            <p class="work-card__description">
-              End-to-end design of a digital triage tool for a Canadian children’s hospital, aimed at&nbsp;reducing nurse burden and improving the ER experience for families.
-            </p>
-          </div>
-          <div class="work-card__icon-wrapper" aria-hidden="true">
-            <img src="./assets/icons/ext_link2.svg" alt="" class="work-card__icon" />
-          </div>
+     <div class="work-card-upper">
+       <div class="work-card__title-row">
+         <h3 id="work1-title" class="work-card__title">Thrive Health</h3>
+         <span class="work-card__icon-wrapper" aria-hidden="true">
+           <img src="./assets/icons/ext_link2.svg" alt="" class="work-card__icon" />
+          </span>
         </div>
+      <div class="work-card__text-block">
+        <p class="work-card__subtitle">Streamlining pediatric ER triage with 92% accuracy</p>
+        <p class="work-card__description">
+          End-to-end design of a digital triage tool for a Canadian children’s hospital, aimed at reducing nurse burden and improving the ER experience for families.
+        </p>
+      </div>
+    </div>
+
+
 
         <div class="work-card__image-wrapper">
           <img src="./assets/images/Case1_sample.png" alt="Screenshot of the Thrive Health triage tool" class="work-card__image" />
@@ -125,17 +129,22 @@
         <a href="case2.html" class="work-card__link" aria-label="Read more about Thrive Health case study"></a>
 
         <div class="work-card-upper">
-          <div class="work-card__general-info">
-            <h3 id="work2-title" class="work-card__title work-card__title--blue">Thrive Health</h3>
-            <p class="work-card__subtitle">Redesigning a seniors' health app for clarity and engagement</p>
-            <p class="work-card__description">
-              Transformed a basic MVP into a full-featured wellness platform, creating a more intuitive, accessible experience tailored to older users.
-            </p>
-          </div>
-          <div class="work-card__icon-wrapper" aria-hidden="true">
-            <img src="./assets/icons/ext_link2.svg" alt="" class="work-card__icon" />
-          </div>
+          <!-- <div class="work-card__general-info"> -->
+            <div class="work-card__title-row">
+              <h3 id="work2-title" class="work-card__title work-card__title--blue">Thrive Health</h3>
+              <span class="work-card__icon-wrapper" aria-hidden="true">
+                <img src="./assets/icons/ext_link2.svg" alt="" class="work-card__icon">
+              </span>
+            </div>
+            <div class="work-card__text-block">
+              <p class="work-card__subtitle">Redesigning a seniors' health app for clarity and engagement</p>
+              <p class="work-card__description">
+                Transformed a basic MVP into a full-featured wellness platform, creating a more intuitive, accessible experience tailored to older users.
+              </p>
+            </div>
+          <!-- </div> -->
         </div>
+
 
         <div class="work-card__image-wrapper">
           <img src="./assets/images/Case2_sample.jpg" alt="Screenshot of the Thrive Health triage tool" class="work-card__image" />
@@ -146,17 +155,22 @@
         <a href="" class="work-card__link" aria-label="Read more about Thrive Health case study"></a>
 
         <div class="work-card-upper">
-          <div class="work-card__general-info">
-            <h3 id="work3-title" class="work-card__title work-card__title--yellow">Heritage4future</h3>
-            <p class="work-card__subtitle">Coming soon: Improving impact through storytelling</p>
-            <p class="work-card__description">
-              Redesigned a donation-based charity website to strengthen narrative, leading to a 31% rise in unique visitors and over $70,000 raised in the next campaign cycle.
-            </p>
-          </div>
-          <div class="work-card__icon-wrapper" aria-hidden="true">
-            <img src="./assets/icons/_button-icon.svg" alt="" class="work-card__icon" />
-          </div>
+          <!-- <div class="work-card__general-info"> -->
+            <div class="work-card__title-row">
+              <h3 id="work3-title" class="work-card__title work-card__title--yellow">Heritage4future</h3>
+              <span class="work-card__icon-wrapper" aria-hidden="true">
+                <img src="./assets/icons/_button-icon.svg" alt="" class="work-card__icon" />
+              </span>
+            </div>
+            <div class="work-card__text-block">
+              <p class="work-card__subtitle">Coming soon: Improving impact through storytelling</p>
+              <p class="work-card__description">
+                Redesigned a donation-based charity website to strengthen narrative, leading to a 31% rise in unique visitors and over $70,000 raised in the next campaign cycle.
+              </p>
+            </div>
+          <!-- </div> -->
         </div>
+
 
         <div class="work-card__image-wrapper">
           <img src="./assets/images/Case3_sample.jpg"
