--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 		<nav class="mobile-menu__nav">
 			<ul>
 			<li><a href="index.html">Home</a></li>
-			<li><a href="#selected-work">Work</a></li>
+			<li><a href="index.html#selected-work">Work</a></li>
 			<li><a href="about.html">About</a></li>
 			<li>
 				<a href="https://docs.google.com/document/d/.../view" target="_blank" rel="noopener noreferrer" class="menu__link menu__link--resume">
