--- a/case1.html
+++ b/case1.html
@@ -654,7 +654,7 @@
           <h4 class="site-footer__heading">Navigation</h4>
           <ul class="site-footer__list">
             <li><a href="index.html">Home</a></li>
-            <li><a href="#selected-work" class="active">Work</a></li>
+            <li><a href="index.html#selected-work" class="active">Work</a></li>
             <li><a href="about.html">About</a></li>
           </ul>
         </div>
